After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 617056 - non-sensical items in context menu for media icons / inconsistent with "Computer" icons
non-sensical items in context menu for media icons / inconsistent with "Compu...
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: computer backend
git master
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2010-04-28 09:01 UTC by Jon Dowland
Modified: 2012-07-30 14:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Mark items in computer:// as not renamable (#617056) (1.00 KB, patch)
2010-07-21 20:40 UTC, Marcus Carlson
committed Details | Review

Description Jon Dowland 2010-04-28 09:01:49 UTC
Reported downstream at https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/570697
downstream version 1:2.30.0-0ubuntu4

The context menu items available for a media icon on the desktop differ from the  ones presented for the icon within the "Desktop" window. In both cases, there are items that do not make sense for the icon in question:

* Via "Computer", "Rename..." is offered (but doesn't work)
* Via the desktop, "Compress..." is offered (but doesn't work)

Interestingly, "Rename..." is present but disabled for the menu via the desktop. So some code somewhere recognises that this menu item makes no sense, and disables it - I wonder why it is not simply removed?

The ideal situation would be for the items in the context menu be pertinent to the item in question and consistent between the desktop and the "Computer" window.
Comment 1 Jon Dowland 2010-04-28 09:02:19 UTC
(Oh, duplicate bug search attempt terms:

nautilus media icon
nautilus icon inconsistent
inconsistent icon
nautilus icon context
media icon context
)
Comment 2 Marcus Carlson 2010-07-21 20:40:51 UTC
Created attachment 166329 [details] [review]
Mark items in computer:// as not renamable (#617056)
Comment 3 Marcus Carlson 2010-07-21 20:41:34 UTC
Moving to correct product, gvfs.
Comment 4 Felix Möller 2012-07-29 11:45:21 UTC
The patch is still valid and would be good to apply.

Source is at:
http://git.gnome.org/browse/gvfs/tree/daemon/gvfsbackendcomputer.c
Comment 5 Matthias Clasen 2012-07-30 06:58:56 UTC
Review of attachment 166329 [details] [review]:

Looks good to me.
Comment 6 Tomas Bzatek 2012-07-30 14:08:53 UTC
Comment on attachment 166329 [details] [review]
Mark items in computer:// as not renamable (#617056)

Committed on master:

commit 1650ec9a0271e0527309e708f5cfe43756396248
Author: Marcus Carlson <mdc@src.gnome.org>
Date:   Mon Jul 30 16:07:59 2012 +0200

    computer: Mark items as not renamable
    
    https://bugzilla.gnome.org/show_bug.cgi?id=617056