computer: Mark items as not renamable

https://bugzilla.gnome.org/show_bug.cgi?id=617056